[package]
name = "onshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
throbber-widgets-tui = "0.2.0"
tui = "0.19.0"
